G Problems encountered section

--- a/report/example.bib
+++ b/report/example.bib
@@ -1,8 +1,15 @@
-
-@book{Alice,
-  author    = "Carroll, L.", 
-  title     = "Alice's Adventures in Wonderland", 
-  publisher = "Macmillan", 
-  year      = "1865"
+@misc{website:TimingFramework,
+	author = "Timing Framework",
+	title = "Official Website",
+	year = "2013",
+	howpublished = "\url{http://java.net/projects/timingframework}",
+	note = "[Online; accessed 4-March-2013]"
 }
 
+@misc{website:TimingFrameworkDemo,
+	author = "Timing Framework",
+	title = "Official Website, Demos Page",
+	year = "2013",
+	howpublished = "\url{http://java.net/projects/timingframework/pages/Demos#Triggers}",
+	note = "[Online; accessed 4-March-2013]"
+}
