--- a/report/example.tex
+++ b/report/example.tex
@@ -75,7 +75,7 @@ Andrew had an example (\ref{fig:firstPrototype}) ready, which had multiple recta
 
 \input{figures/firstPrototype}
 
-While this was a good initial step, we did not have any obvious way to implement Steps, in a sense where multiple Animations could be assigned to one step and we could navigate through these steps back and forth. Therefore both Andrew and Arthur Bigeard started looking into it. \\
+While this was a good initial step, we did not have any obvious way to implement Steps, in a sense where multiple Animations could be assigned to one step and we could navigate through these steps back and forth. Therefore both Andrew and Arthur Bigeard started looking into it.
 
 \input{figures/arthurPrototype}
 
@@ -90,9 +90,9 @@ It had a few good points though:
 	\item it was done on a low level (so the how-to part was obvious if you understood the code) 
 	\item it was not storing too much information (thus it did not really have a memory overhead). 
 \end{itemize}
-But this was not what we wanted – the most important thing for us was the stepping back and forth functionality.  Therefore I started looking into it as well.\\
+But this was not what we wanted – the most important thing for us was the stepping back and forth functionality.  Therefore I started looking into it as well.
 
-During my research of the Timing Framework I found out that we could add triggers, which would start an animation, to a button or to another animation, which would start another animation when it stops or starts running \cite{website:TimingFrameworkDemo}. Thus, triggers seemed like a great tool for linking multiple animations into one Step, linking steps and making a continuous animation.\\
+During my research of the Timing Framework I found out that we could add triggers, which would start an animation, to a button or to another animation, which would start another animation when it stops or starts running \cite{website:TimingFrameworkDemo}. Thus, triggers seemed like a great tool for linking multiple animations into one Step, linking steps and making a continuous animation.
 
 \input{figures/gPrototype}
 
@@ -111,7 +111,7 @@ Therefore, the end result of my prototype was:
 	\item an ability to either step back and forth through the animation by using buttons or see a continuous animation (and it was either that or that)
 \end{itemize}
 
-After looking through both my and Arthurs prototypes, we decided to merge the good parts of each: we kept most of my prototype, but reduced the amount of data stored for each Step, in particular, we made it so it would only store the details of the changed object before the change, rather than the details of all the objects.\\
+After looking through both my and Arthurs prototypes, we decided to merge the good parts of each: we kept most of my prototype, but reduced the amount of data stored for each Step, in particular, we made it so it would only store the details of the changed object before the change, rather than the details of all the objects.
 
 The only issue left then, was the ability to have both step-by-step and continuous animations and allow the user to switch between them at any point of time, but this was not a big issue, since I just used a similar approach I used with ChangeLabel class:
 \begin{enumerate}
@@ -124,7 +124,30 @@ The only issue left then, was the ability to have both step-by-step and continuo
 	\end{itemize}
 \end{enumerate}
 
+\subsubsection{Refactoring}
 
+Our first common implementation that we were using for development was coupled too much with AnimatedArray data structure and was not flexible at all. This became obvious, when we started implementing our AnimatedLinkedList. When we wanted to make our API to animate an AnimatedLinkedList instead of AnimatedArray, we had to change multiple classes, including Rect, ContinuousAnimation and ChangeLabel \ref{fig:coupling}. This was due to no polymorphism in our design.
+
+\input{figures/coupling}
+
+After doing our Professional Software Development 3 (PSD3) D7 deliverable (which was implementation of an Internship Management System we were designing the entire first semester), I have learned how to structure software better and how we can split code into components in Java. Therefore it was time for refactoring.
+
+One of the first things I did was to create a separate package for each data structure. This lead to 4 additional packages being created:
+\begin{itemize} 
+	\item AnimatedArray
+	\item AnimatedBinaryTree
+	\item AnimatedDataStructure
+	\item AnimatedLinkedList
+\end{itemize}
+Each package is supposed to keep classes relevant only to its data structure, apart from AnimatedDataStructure package, which keeps classes that are relevant to all data structures.
+
+I also completely separated the GUI from the rest of the code and created a class called setupGUI.
+
+\input{figures/changeStructure}
+
+The next thing I did was to create a public interface AnimatedDataStructure, which is how we solved the issue I mentioned in the first paragraph. Rect, ContinuousAnimation, ChangeLabel and setupGUI are all expecting an AnimatedDataStructure variable now and all data structures are just implementing this interface. Therefore it does not matter which data structure we use, the common classes (which are in AnimatedDataStructure package) work for all of them. The interface itself also brought common method names and some structure. Another good thing is that now, we only need to change 2 things in the Main class if we want to work with a different data structure: the data structure class name and then the constructor method call \ref{fig:changeStructure}. This did bring in some repetitive methods, like getNextButton(), which are being repeated in all data structures, but could be solved by introducing another abstract class, which would be implementing the AnimatedDataStructure interface and have all of these repetitive methods and then making all data structure classes extend this new abstract class.
+
+All of the above solutions introduced basic polymorphism to our software and solved quite a lot of development issues as well as made it easier to develop and manage the code for future developers (if there are going to be any). While doing all of the above, parts of unneccessary code were removed or changed as well.
 
 \subsection{Liam Bell}
 
