--- a/report/example.bib
+++ b/report/example.bib
@@ -1,15 +1,31 @@
 @misc{website:TimingFramework,
-	author = "Timing Framework",
-	title = "Official Website",
+	author = "Java.net",
+	title = "Timing Framework Official Website",
 	year = "2013",
 	howpublished = "\url{http://java.net/projects/timingframework}",
 	note = "[Online; accessed 4-March-2013]"
 }
 
 @misc{website:TimingFrameworkDemo,
-	author = "Timing Framework",
-	title = "Official Website, Demos Page",
+	author = "Java.net",
+	title = "Timing Framework Official Demos Page",
 	year = "2013",
 	howpublished = "\url{http://java.net/projects/timingframework/pages/Demos#Triggers}",
 	note = "[Online; accessed 4-March-2013]"
+}
+
+@misc{website:JavaFX,
+	author = "Oracle.com",
+	title = "Java-FX website",
+	year = "2013",
+	howpublished = "\url{http://www.oracle.com/technetwork/java/javafx/overview/index.html}",
+	note = "[Online; accessed 11-March-2013]"
+}
+
+@misc{website:Trident,
+	author = "weblogs.java.com",
+	title = "Trident website",
+	year = "2013",
+	howpublished = "\url{http://weblogs.java.net/blog/kirillcool/archive/2009/06/trident_animati.html}",
+	note = "[Online; accessed 11-March-2013]"
 }
